@@ -26,6 +26,7 @@ import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -41,15 +42,12 @@ class TransactionRequestAuthorizizationHandlerTest {
     private PaymentGatewayClient paymentGatewayClient;
 
     @Mock
-    private EcommerceSessionsClient ecommerceSessionsClient;
-
-    @Mock
     private TransactionsEventStoreRepository<TransactionAuthorizationRequestData> transactionEventStoreRepository;
 
     @Mock
     private QueueAsyncClient queueAsyncClient;
 
-    private UUID transactionIdUUID = UUID.randomUUID();
+    private final UUID transactionIdUUID = UUID.randomUUID();
 
     TransactionId transactionId = new TransactionId(transactionIdUUID);
 
@@ -64,7 +62,7 @@ class TransactionRequestAuthorizizationHandlerTest {
 
         TransactionActivated transaction = new TransactionActivated(
                 transactionId,
-                Arrays.asList(new NoticeCode(paymentToken, rptId, amount, description)),
+                List.of(new NoticeCode(paymentToken, rptId, amount, description)),
                 email,
                 null,
                 null,
@@ -105,12 +103,8 @@ class TransactionRequestAuthorizizationHandlerTest {
         ReflectionTestUtils.setField(requestAuthorizationHandler, "queueVisibilityTimeout", "300");
 
         /* preconditions */
-        Mockito.when(paymentGatewayClient.requestGeneralAuthorization(authorizationData)).thenReturn(
-                Mono.zip(
-                        Mono.just(Optional.of(postePayAuthResponseEntityDto)),
-                        Mono.just(Optional.empty())
-                )
-        );
+        Mockito.when(paymentGatewayClient.requestPostepayAuthorization(authorizationData))
+                .thenReturn(Mono.just(postePayAuthResponseEntityDto));
         Mockito.when(transactionEventStoreRepository.save(any())).thenReturn(Mono.empty());
         Mockito.when(queueAsyncClient.sendMessageWithResponse(BinaryData.fromObject(any()), any(), any()))
                 .thenReturn(Mono.empty());
@@ -133,7 +127,7 @@ class TransactionRequestAuthorizizationHandlerTest {
 
         TransactionActivated transaction = new TransactionActivated(
                 transactionId,
-                Arrays.asList(new NoticeCode(paymentToken, rptId, amount, description)),
+                List.of(new NoticeCode(paymentToken, rptId, amount, description)),
                 email,
                 faultCode,
                 faultCodeString,
@@ -186,7 +180,7 @@ class TransactionRequestAuthorizizationHandlerTest {
 
         TransactionActivated transaction = new TransactionActivated(
                 transactionId,
-                Arrays.asList(new NoticeCode(paymentToken, rptId, amount, description)),
+                List.of(new NoticeCode(paymentToken, rptId, amount, description)),
                 email,
                 faultCode,
                 faultCodeString,
@@ -219,12 +213,8 @@ class TransactionRequestAuthorizizationHandlerTest {
                 authorizationData
         );
 
-        Mockito.when(paymentGatewayClient.requestGeneralAuthorization(authorizationData)).thenReturn(
-                Mono.zip(
-                        Mono.just(Optional.empty()),
-                        Mono.just(Optional.empty())
-                )
-        );
+        Mockito.when(paymentGatewayClient.requestXPayAuthorization(authorizationData)).thenReturn(Mono.empty());
+        Mockito.when(paymentGatewayClient.requestPostepayAuthorization(authorizationData)).thenReturn(Mono.empty());
         /* test */
         StepVerifier.create(requestAuthorizationHandler.handle(requestAuthorizationCommand))
                 .expectErrorMatches(error -> error instanceof BadRequestException)
